--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web-vitals": "^3.1.0"
@@ -41,7 +42,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.1",
+    "autoprefixer": "^10.4.20",
     "jsdom": "^22.1.0",
+    "tailwindcss": "^3.4.10",
     "vite": "^4.5.3",
     "vitest": "^0.34.6"
   }
